@@ -1,3 +1,9 @@
+Sun Sep 11 14:01:08 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* error.c (no_errors, no_warnings, ThrowbackStarted): Rename to
+	oNumErrors, oNumWarnings, oThrowbackStarted.
+	(errorCore): Report error backtrace via throwback as well.
+
 Sun Sep 11 13:53:10 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* riscos_c.c (OSCanonicalisePath): Make it static.
